# obfuscxx

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  obfuscxx.sln  vcpkg.json
obfuscxx/: example.cpp  exapmle.cpp  obfuscxx.vcxproj  obfuscxx.vcxproj.filters  quick_test.cpp
obfuscxx/include/: obfuscxx.h
obfuscxx/metrics/: benchmark.h  unit_test.h
